plugins {
    id "org.jetbrains.intellij" version "0.3.12"
    id "org.sonarqube" version "2.7"
}

apply plugin: 'org.jetbrains.intellij'
apply plugin: 'java'
apply plugin: 'jacoco'

targetCompatibility = 1.8
sourceCompatibility = 1.8

repositories {
    mavenCentral()
}

version = '2.6.2'

intellij {
    version '2018.3.2'
}

dependencies {
    compile 'org.sonarsource.sonarqube:sonar-ws:6.5'
    compile 'org.javassist:javassist:3.17.1-GA'
    compile 'com.google.code.gson:gson:2.2.4'
    compile 'joda-time:joda-time:2.3'
    testCompile 'org.easytesting:fest-assert:1.4'
    testCompile 'junit:junit:4.12'
}

sonarqube {
    properties {
        property "sonar.projectName", "SonarQube Community Plugin for Intellij"
        property "sonar.projectKey", "sonar-intellij-plugin"
    }
}

tasks.withType(JavaCompile) {
   it.options.encoding = 'UTF-8'
}